"""AC_HEADER_STAT - Autoconf builtin macro

Checks for stat() and whether struct stat has st_blksize and st_blocks.

Defines:
  - HAVE_STAT_BLOCKS (if struct stat has st_blocks)
  - HAVE_STRUCT_STAT_ST_BLKSIZE (if struct stat has st_blksize)
"""

load("//autoconf:autoconf.bzl", "autoconf")
load("//autoconf:macros.bzl", "macros")

autoconf(
    name = "AC_HEADER_STAT",
    checks = [
        macros.AC_CHECK_MEMBER(
            "struct stat",
            "st_blksize",
            headers = ["sys/stat.h"],
        ),
        macros.AC_CHECK_MEMBER(
            "struct stat",
            "st_blocks",
            headers = ["sys/stat.h"],
        ),
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//autoconf/macros/AC_CHECK_INCLUDES_DEFAULT",
    ],
)
